# Cryptum

./: Cargo.toml  LICENCE  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/cryptum/: byte_array.rs  hash.rs  mod.rs
src/cryptum/algorithms/kyber/: cpapke.rs  mod.rs
src/lib/: byte_array.rs  errors.rs  hash.rs  helper.rs  mod.rs
src/lib/algebraic/: galois_field.rs  matrix.rs  mod.rs  polynomial.rs  ring.rs  vector.rs
src/lib/algorithms/: byte_array.rs  mod.rs
src/lib/algorithms/algebraic/: galois_field.rs  matrix.rs  mod.rs  polynomial.rs  vector.rs
src/lib/algorithms/kyber/: byte_array.rs  compress.rs  constants.rs  cpapke.rs  encoder.rs  galois_field.rs  kem.rs  matrix.rs  mod.rs  ntt.rs  polynomial.rs  utils.rs  vector.rs
src/lib/algorithms/utils/: bits.rs  hash.rs  mod.rs
src/lib/cli/: kyber.rs  mod.rs
src/lib/handler/: kyber.rs  mod.rs  utils.rs
src/lib/helper/: bytes.rs
src/lib/utils/: bits.rs  bytes.rs  hash.rs
tests/: cli.rs  shared_key.txt
tests/inputs/: kyber_kem.priv  kyber_kem.pub  kyber_pke.priv  kyber_pke.pub  plaintext.txt
