[package]
name = "cryptum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cryptum"
path = "src/lib/mod.rs"

[dependencies]
hex = "0.4.3"
hex-literal = "0.3.4"
rand = "0.8.5"
sha3 = "0.10.6"
structopt = { version = "0.3.26", features = ["color"] }
thiserror = "1.0.40"
